# Logger

./: .gitignore  LICENSE  Logger.py  README.md  setup.cfg
src/Logger/: Logger.py
src/Logger_Esmerald1no.egg-info/: PKG-INFO  SOURCES.txt
