[metadata]
name = Logger-Esmerald1no
version = 0.0.2
author = Esmerald1no
description = A basic logger package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Esmerald1no/Logger
project_urls =
    Bug Tracker = https://github.com/Esmerald1no/Logger/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache 2.0
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src